src/App.css
@import "tailwindcss";
@plugin "daisyui" {
  themes: light --default cupcake;
}
#root {
  max-width: 1280px;
  margin: 0 auto;
}
header{
  margin-bottom: 40px;
}
section{
  text-align: center;
}

.joke{
  font-size: 23pt;
  color: #dddbf1;
  text-align: center;
  background: #383f51;
  border: 2px solid #dddbf1;
  box-shadow: 4px 4px 4px rgba(0, 0, 0, 20%);
  padding: 35px;
  width: 350px;
}

.joke-btn{
  background: #29344b;
  color: #dddbf1;
  padding: 30px 65px;
  margin: 50px 0;
  border-radius: 50px;
  text-transform: uppercase;
  font-size: 12pt;
  box-shadow: 4px 4px 4px rgba(0, 0, 0, 20%);
  
}
.joke-btn:hover{
  background: #3c4f76;
  cursor: pointer;
}

.footer-text{
  color: #d1beb0;
  font-size: 16pt;
    line-height: 1.2;
}

.heart-icon{
  color: red;
}

